fixed armor rendering